--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-resizable-panels": "^3.0.5",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.3",
     "react-toastify": "^11.0.5",
